# rust-vision

./: Cargo.toml  package-lock.json
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs  camera_nokhwa.rs  capture.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: frame.rs  lib.rs
crates/streamer/: Cargo.toml
crates/streamer/src/: lib.rs  web_server.rs
crates/video_capture/: Cargo.toml
crates/video_capture/src/: camera_nokhwa.rs  lib.rs
crates/video_encode/: Cargo.toml
crates/video_encode/src/: encoder.rs  lib.rs  x264_encoder.rs
crates/video_stream/: Cargo.toml
crates/video_stream/src/: lib.rs  webrtc_stream.rs  websocket_stream.rs
crates/vision/: Cargo.toml
crates/vision/src/: lib.rs
crates/vision_apriltag/: Cargo.toml
crates/vision_apriltag/src/: lib.rs
crates/vision_core/: Cargo.toml
crates/vision_core/src/: frame.rs  lib.rs
crates/vision_object/: Cargo.toml
crates/vision_object/src/: lib.rs  object_detector.rs  object_detector_onnx.rs
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css  theme.ts
dashboard/src/components/layout/: Sidebar.tsx
dashboard/src/components/stream/: WebRtcPlayer.tsx
dashboard/src/components/views/: Calibration.tsx  Camera.tsx  Dashboard.tsx  Field.tsx  Settings.tsx
src/: main.rs
