[package]
name = "rust-vision"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/camera",
    "crates/vision_apriltag",
    "crates/vision_object",
    "crates/video_encode",
     "crates/video_stream",
]

[dependencies]
apriltag = { path = "/Users/joshuanichols/Documents/repositories/rstg" }
shared = { path = "crates/shared" }
camera = { path = "crates/camera" }
video_encode = { path = "crates/video_encode" }
video_stream = { path = "crates/video_stream" }
vision_apriltag = { path = "crates/vision_apriltag" }
vision_object = { path = "crates/vision_object" }
nokhwa = { version = "0.10", features = ["input-native"] }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
x264 = "0.5.0"
minifb = "0.27"
image = "0.24"
imageproc = "0.23"
rust-embed = "8.3"
mime_guess = "2.0"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
rusttype = "0.9"
tower-http = { version = "0.6.8", features = ["cors"] }
